demo/kube/loadb.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  externalTrafficPolicy: Cluster
  ports:
    - name: 8500-to-8500-tcp
      protocol: TCP
      port: 8500
      targetPort: 8500
  selector:
    run: web
  type: NodePort
