demo/kube/pod.yml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: web-deploy
 spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: teste
        imagePullPolicy: Always
        image: ghcr.io/renato-r-cardoso-alb/img:teste
        ports:
        - containerPort: 8500
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    name: web-deploy
spec:
    type: LoadBlancer
    selector:
        app: web
    ports:
        - port: 8500
          targetPort: 8500
