demo/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: servico
spec:
  selector:
    run: web
  ports:
    - protocol: TCP
      port: 8500
      targetPort: 8500
  type: LoadBalancer
